Interoperability - final draft

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -231,7 +231,7 @@
 		
 		Η ηλεκτρονική συνταγογράφηση στην Ελλάδα βασίζεται στις οδηγίες του νόμου 3892/2010 (ΦΕΚ 189 Α) ``Ηλεκτρονική καταχώριση και εκτέλεση ιατρικών συνταγών και παραπεμπτικών ιατρικών εξετάσεων". Σε αυτόν το νόμο καταγράφονται τα ζητήματα ηλεκτρονικής συνταγογράφησης και τα ζητήματα των ηλεκτρονικών παραπεμπτικών.
 		
-		Ο υπεύθυνος φορέας στην Ελλάδα είναι η Γενική Γραμματεία Κοινωνικών Ασφαλίσεων του Υπουργείου Εργασίας, Κοινωνικής Ασφάλισης και Πρόνοιας. Το σύστημα υποστηρίζεται ηλεκτρονικά από την Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης (ΗΔΙΚΑ Α.Ε.). Η ΗΔΙΚΑ αποτελεί μια ανώνυμη, μη κερδοσκοπικού χαρακτήρα του δημοσίου την οποία αποζημιώνουν οι εξυπηρετούμενοι φορείς για τις υπηρεσίες του παρέχει, όπως για παράδειγμα το έργο μισθοδοσίας των φορέων.  \cite{idika}
+		Ο υπεύθυνος φορέας στην Ελλάδα είναι η Γενική Γραμματεία Κοινωνικών Ασφαλίσεων του Υπουργείου Εργασίας, Κοινωνικής Ασφάλισης και Πρόνοιας. Το σύστημα υποστηρίζεται ηλεκτρονικά από την Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης (ΗΔΙΚΑ Α.Ε.). Η ΗΔΙΚΑ αποτελεί μια ανώνυμη, μη κερδοσκοπικού χαρακτήρα του δημοσίου την οποία αποζημιώνουν οι εξυπηρετούμενοι φορείς για τις υπηρεσίες του παρέχει, όπως για παράδειγμα το έργο μισθοδοσίας των φορέων\cite{idika}.
 		
 		Με τον όρο ηλεκτρονική συνταγογράφηση αναφερόμαστε στη παραγωγή, στην διακίνηση και στον έλεγχο των ιατρικών συνταγών και των παραπεμπτικών για ιατρικές πράξεις, με τη χρήση τεχνολογίας ηλεκτρονικών υπολογιστών και επικοινωνιών, έτσι ώστε να διασφαλίζεται η ασφάλεια, η εγκυρότητα και η διαφάνεια στις πληροφορίες που διακινούνται. Ουσιαστικά, το σύστημα περιλαμβάνει ένα αριθμό από διαδικασίες που σχετίζονται με τη δημιουργία, την εκτέλεση, τη διαχείριση, τον έλεγχο, την εκκαθάριση και την εξόφληση μιας φαρμακευτικής συνταγής ή ενός παραπεμπτικού για ιατρικές πράξεις. Διέπει όλα τα συστήματα και τις τοποθεσίες που εμπλέκονται όπως τα τακτικά ιατρεία των νοσοκομείων ή τα ιδιωτικά ιατρεία, τα κέντρα υγείας, τις κλινικές, τα διαγνωστικά κέντρα, τα φαρμακεία και τα ασφαλιστικά ταμεία.
 
@@ -245,7 +245,7 @@
 		 
 		\item Συντελεί στην ταυτοποίηση και τον έλεγχο των εμπλεκομένων για να διασφαλίσει την ακεραιότητα της διαδικασίας και την ευρεία και επιτυχημένη επιχειρησιακή λειτουργία της ηλεκτρονικής συνταγογράφησης.
 		
-		\item Βελτιώνει την ασφάλεια και την ποιότητα της φροντίδας του ασθενούς. Με την αύξηση του όγκου των φαρμάκων και της πολυπλοκότητα των ιατρικών αναγκών των ασθενών, εφίσταται αυξημένος κίνδυνος σφαλμάτων και παρενεργειών. Η ηλεκτρονική συνταγογράφηση μπορεί να βελτιώσει την ασφάλεια και την ποιότητα της φροντίδας του ασθενούς και να μειώσει τον αριθμό των λαθών
+		\item Βελτιώνει την ασφάλεια και την ποιότητα της φροντίδας του ασθενούς. Με την αύξηση του όγκου των φαρμάκων και της πολυπλοκότητα των ιατρικών αναγκών των ασθενών, υφίσταται αυξημένος κίνδυνος σφαλμάτων και παρενεργειών. Η ηλεκτρονική συνταγογράφηση μπορεί να βελτιώσει την ασφάλεια και την ποιότητα της φροντίδας του ασθενούς και να μειώσει τον αριθμό των λαθών
 		
 		\item Εισάγει και αξιοποιεί τις λειτουργίες της ηλεκτρονικής συνταγογράφησης στην καθημερινή πρακτική.
 
@@ -255,9 +255,9 @@
 	
 		Το ελληνικό σύστημα ηλεκτρονικής συνταγογράφησης,  το επονομαζόμενο e-precription, καθιερώθηκε το 2013. Πλέον καλύπτει περισσότερο  από το 95\% του συνόλου των συνταγών που γράφονται . Το e-precription δημιουργήθηκε με σκοπό να παρέχει τις εξής λειτουργίες: την ηλεκτρονική καταχώρηση και διαχείριση των συνταγών, την ενίσχυση της γνώσης μέσω της δυνατότητας άμεσης πρόσβασης στις πληροφορίες των φαρμάκων, την υποστήριξη λήψης αποφάσεων καθώς βοηθά την επιλογή των φαρμάκων με διάφορες ειδοποιήσεις, την υποστήριξη κατά την διοίκηση, την δημιουργία ηλεκτρονικών συνδέσμων μεταξύ των νοσοκομείων και των φαρμακείων, τις βελτιώσεις στις ήδη υπάρχουσες εργασιακές διαδικασίες, και τέλος την ανάπτυξης μιας διαδρομή ελέγχου για το σύνολο της χρήσης των φαρμάκων.  \cite{miller}
 		
-		Το e-prescription πραγματοποιεί την ηλεκτρονική επεξεργασία των συνταγών για όλους τους ασθενείς, οι οποίοι είναι ασφαλισμένοι σε κάποιον από τους εθνικούς φορείς ασφαλίσεων.Το σύστημα εστιάζει ιδιαιτέρως στην βελτίωση της ασφάλειας των ασθενών, την καλύτερη αξιοποίηση των πόρων και στην διαλειτουργικότητα με άλλα εθνικά ή ευρωπαϊκά συστήματα. Είναι διαθέσιμο μέσω του διαδικτύου (internet) και αποτελεί ένα αυτόνομο ηλεκτρονικό σύστημα εισόδου στο οποίο κάθε υποβολή συνταγής είναι ασφαλής και αναγνωρίζεται από έναν μοναδικό αριθμό. Στο σχήμα \ref{fig:prescr} απεικονίζεται η συνολική δομή του συστήματος. \cite{pangalos}
+		Το e-prescription πραγματοποιεί την ηλεκτρονική επεξεργασία των συνταγών για όλους τους ασθενείς, οι οποίοι είναι ασφαλισμένοι σε κάποιον από τους εθνικούς φορείς ασφαλίσεων.Το σύστημα εστιάζει ιδιαιτέρως στην βελτίωση της ασφάλειας των ασθενών, την καλύτερη αξιοποίηση των πόρων και στην διαλειτουργικότητα με άλλα εθνικά ή ευρωπαϊκά συστήματα. Είναι διαθέσιμο μέσω του διαδικτύου (internet) και αποτελεί ένα αυτόνομο ηλεκτρονικό σύστημα εισόδου στο οποίο κάθε υποβολή συνταγής είναι ασφαλής και αναγνωρίζεται από έναν μοναδικό αριθμό. Στο σχήμα \ref{fig:prescr} απεικονίζεται η συνολική δομή του συστήματος \cite{pangalos}.
 		
-		Ο θεράπων ιατρός δημιουργεί τις συνταγές οι οποίες αποθηκεύονται στην εθνική βάση του συστήματος e-prescription , η οποία βρίσκεται στην ΗΔΙΚΑ. \cite{idika}Όταν ένα φαρμακείο θέλει να εκτελέσει μία συνταγή την  "διαβάζει" από την κεντρική βάση. Οι πληροφορίες ου βρίσκονται στην βάση δεδομένων είναι διαθέσιμες (μέσω ασφαλούς on-line πρόσβασης, ή εξειδικευμένων περιοδικών αναφορών) σε όλα τα σχετικά και ενδιαφερόμενα μέρη (Οργανισμοί Ασφάλισης Υγείας, Υπουργείο Υγείας, εποπτικές αρχές, κλπ). Οι συνταγές που έχουν εκτελεστεί από τα φαρμακεία  ελέγχονται από τους οργανισμούς ασφάλισης, ενώ το σύστημα e-prescription χρησιμοποιείται για να διασταυρώνονται οι έλεγχοι. \cite{papala}
+		Ο θεράπων ιατρός δημιουργεί τις συνταγές οι οποίες αποθηκεύονται στην εθνική βάση του συστήματος e-prescription , η οποία βρίσκεται στην ΗΔΙΚΑ \cite{idika}.Όταν ένα φαρμακείο θέλει να εκτελέσει μία συνταγή την  "διαβάζει" από την κεντρική βάση. Οι πληροφορίες ου βρίσκονται στην βάση δεδομένων είναι διαθέσιμες (μέσω ασφαλούς on-line πρόσβασης, ή εξειδικευμένων περιοδικών αναφορών) σε όλα τα σχετικά και ενδιαφερόμενα μέρη (Οργανισμοί Ασφάλισης Υγείας, Υπουργείο Υγείας, εποπτικές αρχές, κλπ). Οι συνταγές που έχουν εκτελεστεί από τα φαρμακεία  ελέγχονται από τους οργανισμούς ασφάλισης, ενώ το σύστημα e-prescription χρησιμοποιείται για να διασταυρώνονται οι έλεγχοι\cite{papala}.
 
 	Η εφαρμογή του e-prescription είναι μία διαδικτυακή εφαρμογή. Στο σύστημα έχουν πρόσβαση μόνο εξουσιοδοτημένοι χρήστες (ιατροί, φαρμακοποιοί, κλπ), οι οποίοι αναγνωρίζονται και αποκτούν άδεια πρόσβασης μετά την χρήση κατάλληλων διαπιστευτηρίων. για χωροθέτηση και αδειοδότηση.
 	
@@ -316,10 +316,10 @@
 	
 		Η ανάγκη διασύνδεσης των συστημάτων υγείας και των πολιτικών που ακολουθούνται σε κάθε κράτος σχετικά με την υγεία στην Ευρωπαϊκή Ένωση, γίνεται όλο και πιο πιεστική, λόγω της αυξημένης κινητικότητας των ασθενών και των επαγγελματιών του ιατρικού τομέα και της διάδοσης των νέων ιατρικών τεχνολογιών και τεχνικών που αφορούν την τεχνολογία της πληροφορίας. Η διασύνδεση των διάφορων συστημάτων υγείας είναι απαραίτητη για την καλύτερη ποιότητα αλλά και την άμεση πρόσβαση των πολιτών στη διασυνοριακή περίθαλψη.  Πολλά κράτη μέλη της Ευρωπαϊκής Ένωσης έχουν αναπτύξει ηλεκτρονικά συστήματα σχετικά με τα αρχεία των ασθενών. Ο ηλεκτρονικός ιατρικός φάκελος του ασθενούς και η ηλεκτρονική συνταγογράφηση είναι δύο πολύ σημαντικά συστήματα τα οποία προάγουν την ασφαλή και αξιόπιστη ιατροφαρμακευτική περίθαλψη.	 	
 	 	
-	 	Η Ευρωπαϊκή Ένωση στα πλαίσια του στόχου της επικοινωνίας και της συνεργασίας των χωρών που εντάσσονται σε αυτή και την ύπαρξη κοινών οδηγιών στον τομέα της υγείας, τον Ιούλιο του 2008 σε συνεργασία με τους δημόσιους φορείς που έχουν αρμοδιότητα τις ηλεκτρονικές υπηρεσίες υγείας (ηλεκτρονικός ιατρικός φάκελος, ηλεκτρονικής συνταγογράφησης) ξεκίνησε ένα σημαντικό έργο, τον ευρωπαϊκό πιλότο epSOS (Έξυπνες Ανοιχτές Ηλεκτρονικές Υπηρεσίες για τους Ευρωπαίους Ασθενείς). Ο κύριος στόχος του epSOS είναι η ανάπτυξη ενός πρακτικού πλαισίου ηλεκτρονικής υγείας και κατάλληλων  υποδομών  στον τομέα της  Πληροφορικής και των Επικοινωνιών που θα επιτρέπουν την ασφαλή πρόσβαση των διάφορων μη εθνικών ευρωπαϊκών συστημάτων υγειονομικής περίθαλψης στις πληροφορίες αναφορικά με την υγεία του ασθενούς. Το epSOS είναι ένα έργο για την προώθηση της δια-λειτουργικότητας της ηλεκτρονικής υγείας , το οποίο χρηματοδοτεί η Ευρωπαϊκή Ένωση και θέλει να χτίσει μια υποδομή υπηρεσιών, που θα επιτρέπει  τη διασυνοριακή διαλειτουργικότητα των συστημάτων ηλεκτρονικών μητρώων υγείας στην Ευρώπη, χωρίς να καταπατά όμως νομοθετικές ρυθμίσεις ή να υπερβαίνει τα ήδη υπάρχουσα εθνικά συστήματα. \cite{Dogac2012}
+	 	Η Ευρωπαϊκή Ένωση στα πλαίσια του στόχου της επικοινωνίας και της συνεργασίας των χωρών που εντάσσονται σε αυτή και την ύπαρξη κοινών οδηγιών στον τομέα της υγείας, τον Ιούλιο του 2008 σε συνεργασία με τους δημόσιους φορείς που έχουν αρμοδιότητα τις ηλεκτρονικές υπηρεσίες υγείας (ηλεκτρονικός ιατρικός φάκελος, ηλεκτρονικής συνταγογράφησης) ξεκίνησε ένα σημαντικό έργο, τον ευρωπαϊκό πιλότο epSOS (Έξυπνες Ανοιχτές Ηλεκτρονικές Υπηρεσίες για τους Ευρωπαίους Ασθενείς). Ο κύριος στόχος του epSOS είναι η ανάπτυξη ενός πρακτικού πλαισίου ηλεκτρονικής υγείας και κατάλληλων  υποδομών  στον τομέα της  Πληροφορικής και των Επικοινωνιών που θα επιτρέπουν την ασφαλή πρόσβαση των διάφορων μη εθνικών ευρωπαϊκών συστημάτων υγειονομικής περίθαλψης στις πληροφορίες αναφορικά με την υγεία του ασθενούς. Το epSOS είναι ένα έργο για την προώθηση της δια-λειτουργικότητας της ηλεκτρονικής υγείας , το οποίο χρηματοδοτεί η Ευρωπαϊκή Ένωση και θέλει να χτίσει μια υποδομή υπηρεσιών, που θα επιτρέπει  τη διασυνοριακή διαλειτουργικότητα των συστημάτων ηλεκτρονικών μητρώων υγείας στην Ευρώπη, χωρίς να καταπατά όμως νομοθετικές ρυθμίσεις ή να υπερβαίνει τα ήδη υπάρχουσα εθνικά συστήματα\cite{Dogac2012}.
 
 
-		Το epSOS αποτελείται από δύο χωριστές υπηρεσίες ηλεκτρονικής υγείας, τον ιατρικό φάκελο ασθενούς (patient medical record) και την ηλεκτρονική συνταγογράφηση (e-prescription),  για τις οποίες αναζητούνται δια-λειτουργικές μέθοδοι στη διασυνοριακή επικοινωνία. Ειδικότερα, ο ιατρικός φάκελος ασθενούς  (patient medical record) στα πλαίσια του epSOS αποτελείται από στοιχεία τα οποία εμπεριέχουν γενικές πληροφορίες για τον ασθενή (π.χ. όνομα, ηλικία, γένος), σημαντικά κλινικά δεδομένα (π.χ. αλλεργίες, χρόνιες ασθένειες, χειρουργικές επεμβάσεις) , καθώς και τα τρέχοντα αλλά και παλαιότερα φαρμακευτικά σκευάσματα που λάμβανε. Ο φάκελος ασθενούς παρέχει τις βασικές πληροφορίες, οι οποίες βοηθούν τους επαγγελματίες του τομέα της υγείας να λάβουν σωστότερες και πιο ασφαλείς αποφάσεις σχετικά με την θεραπεία και τα φάρμακα που θα ακολουθήσουν οι ασθενείς. Οι πληροφορίες αυτές πρέπει να παρέχονται στην γλώσσα των εκάστοτε γιατρών, ώστε να μην προκύπτουν γλωσσικά εμπόδια. Η ηλεκτρονική συνταγογράφηση αφορά τη συνταγογράφηση των φαρμάκων με χρήση κατάλληλου λογισμικού και την ηλεκτρονική διαβίβασή τους. Στην ηλεκτρονική συνταγογράφηση η διαλειτουργικότητα μεταξύ των εθνικών συστημάτων είναι απαραίτητη όταν έχουμε έναν ασθενή ο οποίος χρειάζεται κάποιο φάρμακο, το οποίο έχει ήδη συνταγογραφηθεί σε κάποια άλλη χώρα.  Ο φαρμακοποιός θα πρέπει να αποκτήσει ηλεκτρονική πρόσβαση στη συνταγή, και όταν το φάρμακο αγοραστεί, το ηλεκτρονικό σύστημα θα πρέπει να ενημερώσει σχετικά με τα διανεμημένα φάρμακα το σύστημα υγειονομικής περίθαλψης της χώρας του ασθενούς. \cite{epSOS}
+		Το epSOS αποτελείται από δύο χωριστές υπηρεσίες ηλεκτρονικής υγείας, τον ιατρικό φάκελο ασθενούς (patient medical record) και την ηλεκτρονική συνταγογράφηση (e-prescription),  για τις οποίες αναζητούνται δια-λειτουργικές μέθοδοι στη διασυνοριακή επικοινωνία. Ειδικότερα, ο ιατρικός φάκελος ασθενούς  (patient medical record) στα πλαίσια του epSOS αποτελείται από στοιχεία τα οποία εμπεριέχουν γενικές πληροφορίες για τον ασθενή (π.χ. όνομα, ηλικία, γένος), σημαντικά κλινικά δεδομένα (π.χ. αλλεργίες, χρόνιες ασθένειες, χειρουργικές επεμβάσεις) , καθώς και τα τρέχοντα αλλά και παλαιότερα φαρμακευτικά σκευάσματα που λάμβανε. Ο φάκελος ασθενούς παρέχει τις βασικές πληροφορίες, οι οποίες βοηθούν τους επαγγελματίες του τομέα της υγείας να λάβουν σωστότερες και πιο ασφαλείς αποφάσεις σχετικά με την θεραπεία και τα φάρμακα που θα ακολουθήσουν οι ασθενείς. Οι πληροφορίες αυτές πρέπει να παρέχονται στην γλώσσα των εκάστοτε γιατρών, ώστε να μην προκύπτουν γλωσσικά εμπόδια. Η ηλεκτρονική συνταγογράφηση αφορά τη συνταγογράφηση των φαρμάκων με χρήση κατάλληλου λογισμικού και την ηλεκτρονική διαβίβασή τους. Στην ηλεκτρονική συνταγογράφηση η διαλειτουργικότητα μεταξύ των εθνικών συστημάτων είναι απαραίτητη όταν έχουμε έναν ασθενή ο οποίος χρειάζεται κάποιο φάρμακο, το οποίο έχει ήδη συνταγογραφηθεί σε κάποια άλλη χώρα.  Ο φαρμακοποιός θα πρέπει να αποκτήσει ηλεκτρονική πρόσβαση στη συνταγή, και όταν το φάρμακο αγοραστεί, το ηλεκτρονικό σύστημα θα πρέπει να ενημερώσει σχετικά με τα διανεμημένα φάρμακα το σύστημα υγειονομικής περίθαλψης της χώρας του ασθενούς\cite{epSOS}.
 		
 		 Το epSOS επιτυγχάνει την ασφαλή πρόσβαση των ασθενών σε πληροφορίες σχετικά με την υγεία τους για τα διάφορα ευρωπαϊκά συστήματα υγείας. Το σύστημα είναι φτιαγμένο για να εξυπηρετήσει έναν πολίτη της Ευρωπαϊκής Ένωσης  που ενώ είναι κατοικεί σε μια συγκεκριμένη χώρας δέχεται τακτικά υπηρεσίες υγείας σε μια άλλη χώρα εξαιτίας του καθώς εργάζεται σε αυτή τη χώρα ή βρίσκεται προσωρινά σε μία άλλη χώρα (π.χ. για τουρισμό ) και είναι ανάγκη να εκτελέσει μία ιατρική συνταγή της χώρας του ή χρειάζεται επείγουσα ιατρική περίθαλψη. Το epSOS παρέχει την κοινοτική οδηγία για τη διασυνοριακή ιατρική περίθαλψη, η οποία θα πρέπει να ενσωματωθεί στο εθνικό δίκαιο των κρατών μελών τα επόμενα χρόνια και επιπροσθέτως προτείνει τεχνικές λύσεις σε όλα τα επίπεδα δια-λειτουργικότητας, όπως και σε θέματα πολιτικής και σε νομικά ζητήματα. επεκτείνεται πέρα από την έκδοση συστάσεων, μοντέλων οργάνωσης, και εργαλείων λογισμικού  στην  δοκιμή των αποτελέσματα αυτών μέσω πραγματικών πιλοτικών εφαρμογών σε πολλές ευρωπαϊκές περιφέρειες και χώρες.
 		 
@@ -392,11 +392,9 @@
 		
 		Τα κριτήρια επιλεξιμότητας, τα οποία προκύπτουν με βάση τις οδηγίες του WHO, \cite{safety} που ελέγχει το σύστημα μας είναι τα εξής.
 		
-		%να τα γραψω
-		
-		Αντιβιοτικά:Υποχρεωτική αποχή του αιμοδότη για 7 ημέρες, μετά την λήξη της θεραπείας.
-		
-		\begin{itemize}
+	\begin{itemize}
+			
+		\item Αντιβιοτικά:Υποχρεωτική αποχή του αιμοδότη για 7 ημέρες, μετά την λήξη της θεραπείας.
 	
 		\item Αιμορραγίες: Αν υπάρχει ιστορικό αιμορραγιών ή μη φυσιολογικής πήξης του αίματος, ο εθελοντής αποκλείεται.
 		\item Μετάγγιση αίματος: Υποχρεωτική αποχή 12 μηνών από αιμοδοσία.
@@ -426,6 +424,7 @@
 	
 
 		\end{itemize}
+		
 		Με βάση τα άνωθεν, το ιατρικό ιστορικό του ασθενούς και την κατάλληλη παραμετροποίηση, ο αλγόριθμος που τρέχει αποφαίνεται για το αν ο ασθενής είναι κατάλληλος ή όχι για αιμοδοσία. Όπως είδαμε για τα CDS (Clinical Decision Support) συστήματα, το σύστημα επιστρέφει την πρόταση του σχετικά με το αν πρέπει να απορριφθεί ή όχι ο ασθενής και την αναφορά των ευρημάτων του αλλά ο γιατρός είναι αυτός ο οποίος καταλήγει στην τελική απόφαση έγκρισης ή απόρριψης του ασθενούς. Το σύστημα χρησιμοποιεί προκαθορισμένους κανόνες, ενώ προσαρμόζει την βάση γνώσης στα ιατρικά δεδομένα που αντλεί για τον συγκεκριμένο ασθενή που εξετάζεται.
 	
 		
@@ -446,8 +445,13 @@
 			
 		\end{itemize}				
 		
-		
-		%να φτιαξω σχημα
+			\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=1\textwidth]{Architecture_high.png}
+	    \caption{Αρχιτεκτονική του συτήματος EaaS (Eligibility as a Service). }
+	    \label{fig:architecture_EaaS}
+	\end{figure}
+	
 		
 		Τα δεδομένα της ηλεκτρονικής συνταγογράφησης και του ηλεκτρονικού ιατρικού φακέλου του ασθενούς βρίσκονται στο κέντρο δεδομένων (data center) της ΗΔΙΚΑ. Για να προσπελαστούν τα δεδομένα με ασφάλεια, χρησιμοποιούμε ασφαλή πρόσβαση μέσω του συστήματος ΣΥΖΕΥΞΙΣ. Τα δεδομένα που στέλνονται από το patient record και το e-prescription μορφοποιούνται σε κατάλληλα CDA documents, με τις επιπλέον προτυποποίησεις που προτείνει το epSOS για να αποσταλούν στο CDS σύστημα.
 		
