--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -1372,9 +1372,28 @@
 	Επίσης ο χρήστης έχει τη δυνατότητα να προσκαλέσει τους φίλους του στην εφαρμογή. Σε αυτό το σημείο πρέπει να αναφερθεί ότι κάθε φορά που ο χρήστης αλληλεπιδρά μέσω της εφαρμογής με τα μέσα κοινωνικής δικτύωσης κερδίζει πόντους σύμφωνα με το σύστημα πόντων όπως περιγράφηκε στο \ref{sssect:point_system} . Αξιοποιώντας τη δύναμη των κοινωνικών δικτύων είμαστε σε θέση να δώσουμε μεγαλύτερη προβολή και κοινωνικό χαρακτήρα στην εθελοντική αιμοδοσία. Μετατρέποντας ουσιαστικά τους εθελοντές αιμοδότες σε πρότυπα της εθελοντικής αιμοδοσίας με στόχο την προσέλκυση νέων εθελοντών αιμοδοτών.
 	
 	\subsection{Ειδοποιήσεις και Υπενθυμίσεις}
+		
+		 Όταν υπάρχει κάποια συγκεκριμένη ανάγκη για αίμα ή ένα καθορισμένο γεγονός αιμοδοσίας, το σύστημα στέλνει στους εθελοντές αιμοδότες νέες ειδοποιήσεις (push notifications). Οι ειδοποιήσεις αυτές δεν αποστέλλονται σε όλους τους χρήστες που είναι εγγεγραμμένοι στην εφαρμογή, αντιθέτως το σύστημα τρέχει κάποιους ``έξυπνους αλγορίθμους" και επιλέγει την ομάδα χρηστών που τηρούν τις απαραίτητες προϋποθέσεις. Τα κριτήρια που ελέγχει το σύστημα αφορούν στο αν έχει παρέλθει το απαιτούμενο διάστημα μέχρι να μπορεί να δώσει ξανά αίμα ο εθελοντής, στην καταλληλότητα με βάση τη γεωγραφική του τοποθεσία και στο αν έχει τη ζητούμενη ομάδα αίματος, στην περίπτωση που υπάρχουν .
+		 
+		
+		Ο χρήστης έχει την επιλογή να αποδεχθεί, να απορρίψει και να αναβάλει την ειδοποίηση. Στην περίπτωση αποδοχής, ο χρήστης μπορεί να κλείσει ένα ραντεβού με το αντίστοιχο κέντρο αιμοδοσίας καθώς το σύστημα παρέχει ολοκληρωμένη διαχείριση ραντεβού. Η εφαρμογή έχει τη δυνατότητα να παρέχει υπενθυμίσεις εγκαίρως μέσα από πολλούς διαφορετικούς τρόπους, όπως μήνυμα ηλεκτρονικού ταχυδρομείου, επαναποστολή της ειδοποίησης και συγχρονισμός και καταχώρηση στο ημερολόγιο του χρήστη). Σε περίπτωση που ο χρήστης απορρίψει ένα αίτημα, αυτό μεταφέρεται και εμφανίζεται αυτόματα στο ιστορικό των χρηστών, στην ενότητα των απορριφθέντων αιτημάτων. Ως εκ τούτου ο χρήστης μπορεί να αναθεωρήσει τα αιτήματα του και να το εξετάσει σε μεταγενέστερο χρόνο. 
+		
+		 Σύμφωνα με μελέτες που έχουν γίνει υπάρχει μεγάλος αριθμός αιμοδοτών που ενώ πληρούν τις απαραίτητες προϋποθέσεις και έχουν την θέληση να αιμοδοτήσουν, δεν προβαίνουν σε αιμοδοσία επειδή δεν υπάρχει κάποιος να τους το υπενθυμίσει \cite{Marantidou2007}. Η αντιμετώπιση αυτού του προβλήματος επιτυγχάνεται με τις συστηματικές ειδοποιήσεις που λαμβάνει ο αιμοδότης, οι οποίες εκτός από μέσο για υπενθύμιση, δρουν ως κινητήριος δύναμη αφύπνισης και διατήρησης της εθελοντικής συνείδησης του αιμοδότη.
+		 
+		 Ένα άλλο φαινόμενο το οποίο δυσχεραίνει ακόμα περισσότερο την ήδη δύσκολη κατάσταση στον τομέα των αιμοδοσιών είναι η προσωρινή απόρριψη των αιμοδοτών.  Το φαινόμενο αυτό  λαμβάνει χώρα σε περιπτώσεις που οι χρήστες αποκλείονται προσωρινά από την αιμοδοσία, λόγω του ότι δεν τηρούν τα κριτήρια ακαταλληλότητας (π.χ. πήραν ασπιρίνη την ημέρα της αιμοδοσίας). Από τον συνολικό αριθμό αιμοδοσιών το 14.13\% αποκλείονται για λόγους προσωρινής ακαταλληλότητας \cite{WorldHealth}. Μελέτες έχουν δείξει ότι οι περισσότεροι εθελοντές δεν επιστρέφουν αν απορριφθούν μία φορά, συγκεκριμένα μόλις το 11\% επιστρέφει μετά την απαιτούμενη περίοδο για να πραγματοποιήσει δωρεά αίματος \cite{halperin1998effect}. Όταν τηρούνται οι κατάλληλες συνθήκες ώστε να είναι σε θέση ο αιμοδότης να προσφέρει πάλι αίμα, η εφαρμογή του στέλνει ειδοποιήσεις για τα γεγονότα αιμοδοσίας ώστε να τον παρακινήσει και να του υπενθυμίσει να δώσει αίμα.
+		 
+				 		 
+		 
+		 
+
+	
+		 
+		  Ως εκ τούτου, με την χρήση των κατάλληλων ειδοποιήσεων, η ανταπόκριση θα αυξηθεί με ικανοποιητικό ρυθμό και οι αιμοδοσίες θα πολλαπλασιαστούν\cite{Marantidou2007}.
 	
 	
 	\subsection{Heamovigilance}
+	
+	
 
 
 	
