System Analysis- Push notifications -final

--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -1382,13 +1382,8 @@
 		 
 		 Ένα άλλο φαινόμενο το οποίο δυσχεραίνει ακόμα περισσότερο την ήδη δύσκολη κατάσταση στον τομέα των αιμοδοσιών είναι η προσωρινή απόρριψη των αιμοδοτών.  Το φαινόμενο αυτό  λαμβάνει χώρα σε περιπτώσεις που οι χρήστες αποκλείονται προσωρινά από την αιμοδοσία, λόγω του ότι δεν τηρούν τα κριτήρια ακαταλληλότητας (π.χ. πήραν ασπιρίνη την ημέρα της αιμοδοσίας). Από τον συνολικό αριθμό αιμοδοσιών το 14.13\% αποκλείονται για λόγους προσωρινής ακαταλληλότητας \cite{WorldHealth}. Μελέτες έχουν δείξει ότι οι περισσότεροι εθελοντές δεν επιστρέφουν αν απορριφθούν μία φορά, συγκεκριμένα μόλις το 11\% επιστρέφει μετά την απαιτούμενη περίοδο για να πραγματοποιήσει δωρεά αίματος \cite{halperin1998effect}. Όταν τηρούνται οι κατάλληλες συνθήκες ώστε να είναι σε θέση ο αιμοδότης να προσφέρει πάλι αίμα, η εφαρμογή του στέλνει ειδοποιήσεις για τα γεγονότα αιμοδοσίας ώστε να τον παρακινήσει και να του υπενθυμίσει να δώσει αίμα.
 		 
-				 		 
-		 
-		 
-
 	
-		 
-		  Ως εκ τούτου, με την χρήση των κατάλληλων ειδοποιήσεων, η ανταπόκριση θα αυξηθεί με ικανοποιητικό ρυθμό και οι αιμοδοσίες θα πολλαπλασιαστούν\cite{Marantidou2007}.
+		 Με βάση τα όσα προαναφέρθηκαν, η χρήση κατάλληλων ειδοποιήσεων και ως προς την χρονική συχνότητα και ως το προς τον παραλήπτη τους, βοηθάει στην τακτική συμμετοχή των εθελοντών σε αιμοδοσίες και συντελεί στην αντιμετώπιση κάποιων από τα προβλήματα που τους αποθαρρύνουν. Η σωστή διαχείριση και αποστολή των ειδοποιήσεων είναι ένα πολύ σημαντικό ζήτημα, καθώς δεν πρέπει να στέλνονται περιττές ή λανθασμένα επαναλαμβανόμενες ειδοποιήσεις, οι οποίες μπορεί να έχουν ως αποτέλεσμα να κουράσουν τον χρήστη αλλά πρέπει η συχνότητα αποστολής τους να αποφέρει το βέλτιστο αποτέλεσμα. Στόχος του συστήματος ειδοποιήσεων είναι η ανταπόκριση να αυξηθεί με ικανοποιητικό ρυθμό και οι αιμοδοσίες να πολλαπλασιαστούν\cite{Marantidou2007}.
 	
 	
 	\subsection{Heamovigilance}
