--- a/references.bib
+++ b/references.bib
@@ -2099,6 +2099,17 @@ URN: urn:nbn:de:0114-fqs0501297},
   Url                      = {http://www.jstor.org/stable/2489100}
 }
 
+@Electronic{daggerAndroid,
+  Title                    = {Dagger - A fast dependency injector for Android},
+  Author                   = {Jake Wharton},
+  HowPublished             = {http://square.github.io/dagger/},
+  Language                 = {English},
+  Url                      = {http://square.github.io/dagger/},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.21}
+}
+
 @Book{circulatorySystem,
   Title                    = {The Circulatory System},
   Author                   = {Susan Whittemore},
