System Analysis- Heamovigilance

--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -1388,7 +1388,10 @@
 	
 	\subsection{Heamovigilance}
 	
-	
+		Ένα άλλο θέμα για το οποίο λαμβάνεται μέριμνα είναι το ζήτημα της αιμοεπαγρυπνήσης. Μία απαραίτητη προϋπόθεση για την αποτελεσματική εφαρμογή της αιμοεπαγρυπνήσης είναι η ύπαρξη συστήματος ιχνηλασιμότητας, δηλαδή πρέπει να εξασφαλίζεται η ικανότητα εντοπισμού καθεμίας από τις μονάδας αίματος ή καθενός από τα παράγωγα προϊόντα αίματος που προέρχονται από αυτήν, από τον εθελοντή αιμοδότη μέχρι τον τελικό προορισμό τους.
+		
+		
+		Το σύστημα μας, αρχικά καταγράφει τον αιμοδότη από τον οποίο προήλθε το αίμα. Στην συνέχεια, κάθε μονάδα αίματος παρακολουθείται με χρήση RFIDs και όταν τελικά φτάσει στον τελικό αποδέκτη το πληροφοριακό σύστημα του νοσοκομείου αποθηκεύει την πληροφορία αυτή στο πληροφοριακό του σύστημα. Με χρήση κατάλληλων πρωτοκόλλων και ασφαλούς διαύλου επικοινωνίας το σύστημα μας λαμβάνει από το πληροφοριακό σύστημα του νοσοκομείου το όνομα και το μοναδικό αναγνωριστικό του ασθενούς (ΑΜΚΑ) και τα αποθηκεύει, συσχετίζοντας τα με τα στοιχεία του αιμοδότη. Αυτή η διαδικασία έχει ως αποτέλεσμα να κρατείται πλήρες ηλεκτρονικό αρχείο το οποίο συσχετίζει σε περιπτώσεις ανεπιθύμητων συμβαμάτων τον αιμοδότη με τον αιμολήπτη. Η λειτουργία είναι ιδιαίτερα σημαντική για την ελαχιστοποίηση των ανεπιθύμητων κρουσμάτων και κατ 'επέκταση για τη δημόσια υγεία.	
 
 
 	
