--- a/implementation.tex
+++ b/implementation.tex
@@ -2,8 +2,15 @@
 
 \chapter{Υλοποίηση}\label{ch:Implementation}
 
+\section{Αρχιτεκτονική του συστήματος}
+Για την υλοποίηση του προτεινόμενου συστήματος αιμοδοσίας, χρησιμοποιείται η διαδεδομένη αρχιτεκτονική πολλαπλών επιπέδων (multitier architecture) όπως απεικονίζεται στο σχήμα \ref{fig:architect_schema}.
 
-
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{categories_of_android_tests.png}
+	    \caption{ Σχηματικό διάγραμμα του συστήματος. }
+	    \label{fig:architect_schema}
+	\end{figure}
 
 \section{Βάση δεδομένων}
 	\subsection{Σχήμα Βάσης}
