About blood: Translate antigons Figure

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -42,7 +42,7 @@
 			Στον ορό του αίματος των διαφόρων ατόμων παρατηρούνται φυσιολογικές συγκολλητίνες ομόλογοι των συγκολλητινογόνων Α και Β. Οι φυσιολογικές συγκολλητίνες είναι οι α (anti- A) και οι β (anti-B). Στον ορό δεν υπάρχει ποτέ η συγκολλητίνη η ομόλογος προς το συγκολλητινογόνο που υπάρχει στα ερυθρά αιμοσφαίρια του ιδίου ατόμου. Έτσι στον ορό του αίματος ΑΒ δεν υπάρχει καμία συγκολλητίνη. Στον ορό της ομάδας Α υπάρχει η συγκολλητίνη anti-B ή β. Στον ορό της ομάδας Β υπάρχει η συγκολλητίνη anti-Α ή α. Τέλος στον ορό της ομάδας Ο υπάρχουν και οι δύο συγκολλητίνες α και β. Η συγκολλητίνη α αντιδρά με το συγκολλητινιγόνο Α και η συγκολλητίνη β αντιδρά με το συγκολλητινιγόνο Β. Εάν επομένως σε μία μετάγγιση αίματος ο ορός του ασθενούς (δέκτη) έχει συγκολλητίνες (α ή β, α και β), τότε αυτές θα συγκολλήσουν τα ερυθρά αιμοσφαίρια του δότη, όταν στα αιμοσφαίρια αυτά υπάρχουν συγκολλητινογόνα Α ή Β ή Α και Β. Στην περίπτωση αυτή τα συγκολλημένα ερυθρά αιμοσφαίρια μπορεί να προκαλέσουν ακόμη και το θάνατο του δέκτη. Στο σχήμα \ref{fig:blood_antibodies_antigons} φαίνονται συγκεντρωτικά τα στοιχεία που αναλύσαμε παραπάνω.		
 	\begin{figure}[h!]
 	    \centering
-	    \includegraphics[width=0.7\textwidth]{blood_antibodies_antigons.jpg}
+	    \includegraphics[width=0.7\textwidth]{blood_antibodies_antigons.png}
 	    \caption{Αντισώματα και αντιγόνα του αίματος}
 	    \label{fig:blood_antibodies_antigons}
 	\end{figure}
@@ -175,15 +175,24 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 		\end{enumerate}
 		
 		Ο πραγματικός βέβαια εθελοντής αιμοδότης είναι εκείνος που προσέρχεται να δώσει αίμα με μοναδικό κίνητρο την κοινωνική αλληλεγγύη και τον αλτρουισμό, δεν τον απασχολεί σε ποιον θα δοθεί το αίμα που πρόσφερε και δεν περιμένει κανένα απολύτως αντάλλαγμα.
-	\subsection{Ανάγκες μονάδων αίματος - Εξωτερικό}		
+				
 	\subsection{Εθελοντική αιμοδοσία στην Ελλάδα}
 		Στην Ελλάδα το "Εθνικό Κέντρο Αιμοδοσίας" (Ε.ΚΕ.Α) το οποίο στεγάζεται στο Υπουργείο Υγείας και Πρόνοιας αποτελεί το κεντρικό όργανο για την οργάνωση των Υπηρεσιών Αιμοδοσίας. Οι Υπηρεσίες Αιμοδοσίας μπορούν να διαχωριστούν στις παρακάτω τρεις κατηγορίες:
 		\begin{enumerate}
-			\item Κέντρα Αιμοδοσίας
+			\item Κέντρα Αίματος
 			\item Σταθμοί Αιμοδοσίας Α' Τάξης
 			\item Σταθμοί Αιμοδοσίας Β' Τάξης
-		\end{enumerate}		 
-		 Τα κέντρα Αιμοδοσίας καλύπτουν τις ανάγκες μιας ευρύτερης γεωγραφικής περιοχής ή μεγάλων πληθυσμιακών ομάδων και εδρεύουν σε νοσοκομεία. Οι Σταθμοί Αιμοδοσίας Α' Τάξης είναι μικρότερες υπηρεσίες και καλύπτουν τις ανάγκες του νοσοκομείου στο οποίο εδρεύουν και άλλες τοπικές ανάγκες. Οι Σταθμοί Αιμοδοσίας Β' Τάξης καλύπτουν αποκλειστικά τις ανάγκες του νοσοκομείου που στεγάζονται.
+		\end{enumerate}
+				 
+		 Τα κέντρα Αίματος καλύπτουν τις ανάγκες μιας ευρύτερης γεωγραφικής περιοχής ή μεγάλων πληθυσμιακών ομάδων και εδρεύουν σε νοσοκομεία. Κάθε κέντρο αίματος εκτελεί μοριακούς έλεγχους για τους σταθμούς αιμοδοσίας της περιοχής του (για περισσότερα βλ. παράρτημα ) Η Ελλάδα διαθέτει 4 μεγάλα κέντρα αίματος: 
+		\begin{enumerate}
+			\item Ε.ΚΕ.Α - Εθνικό κέντρο αιμοδοσίας.
+			\item Πανεπιστημιακό Νοσοκομείο ΑΧΕΠΑ Θεσσαλονίκης.
+			\item Πανεπιστημιακό Νοσοκομείο Ρίο Πατρών.
+			\item Πανεπιστημιακό Νοσοκομείο Βενιζέλειο Ηρακλείου Κρήτης.
+		\end{enumerate}				 
+		 
+		 Οι σταθμοί Αιμοδοσίας Α' Τάξης είναι μικρότερες υπηρεσίες και καλύπτουν τις ανάγκες του νοσοκομείου στο οποίο εδρεύουν και άλλες τοπικές ανάγκες. Οι Σταθμοί Αιμοδοσίας Β' Τάξης καλύπτουν αποκλειστικά τις ανάγκες του νοσοκομείου που στεγάζονται.
 		
 		Το σύστημα αιμοδοσίας στην Ελλάδα είναι αποκεντρωμένο και αποτελείται από 101 υπηρεσίες αιμοδοσίας υπό την αιγίδα και εποπτεία του Υπουργείου Υγείας\cite{filloKivernisews}. Κάθε υπηρεσία αιμοδοσίας αποτελεί ένα ενσωματωμένο μέρος ενός δημόσιου νοσοκομείου και οι αρμοδιότητές της περιλαμβάνουν α) τη στρατολόγηση νέων αιμοδοτών, β) τη συλλογή και τον έλεγχο του αίματος και γ) και τη διακίνηση του αίματος και των παραγώγων του στις νοσοκομειακές κλινικές \cite{Marantidou2007}.
 		
