Add Blood Centers interoperability in Appendix

--- a/blood_donation.tex
+++ b/blood_donation.tex
@@ -184,7 +184,7 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 			\item Σταθμοί Αιμοδοσίας Β' Τάξης
 		\end{enumerate}
 				 
-		 Τα κέντρα Αίματος καλύπτουν τις ανάγκες μιας ευρύτερης γεωγραφικής περιοχής ή μεγάλων πληθυσμιακών ομάδων και εδρεύουν σε νοσοκομεία. Κάθε κέντρο αίματος εκτελεί μοριακούς έλεγχους για τους σταθμούς αιμοδοσίας της περιοχής του (για περισσότερα βλ. παράρτημα ) Η Ελλάδα διαθέτει 4 μεγάλα κέντρα αίματος: 
+		 Τα κέντρα Αίματος καλύπτουν τις ανάγκες μιας ευρύτερης γεωγραφικής περιοχής ή μεγάλων πληθυσμιακών ομάδων και εδρεύουν σε νοσοκομεία. Κάθε κέντρο αίματος εκτελεί μοριακούς έλεγχους για τους σταθμούς αιμοδοσίας της περιοχής του (για περισσότερα βλ. παράρτημα \ref{ch:blood_centers}) Η Ελλάδα διαθέτει 4 μεγάλα κέντρα αίματος: 
 		\begin{enumerate}
 			\item Ε.ΚΕ.Α - Εθνικό κέντρο αιμοδοσίας.
 			\item Πανεπιστημιακό Νοσοκομείο ΑΧΕΠΑ Θεσσαλονίκης.
@@ -216,15 +216,15 @@ Rh-Θετικοί και το 15\% δεν το έχουν, δηλαδή είνα
 
 Τέλος, θα πρέπει να τονιστεί η επιτακτική ανάγκη για πραγματοποίηση τόσο οργανωτικών, όσο και επιστημονικών αλλαγών στη χώρα μας στο εγγύς μέλλον, οι οποίες θα μπορέσουν οδηγήσουν με γοργούς ρυθμούς, στην επίτευξη του πρωταρχικού στόχου, δηλαδή στην επίτευξη αυτάρκειας σε αίμα και παράγωγα αίματος. Μία επάρκεια η οποία θα πρέπει να προέρχεται αποκλειστικά και μόνο από Εθελοντική Αιμοδοσία. Στην κατεύθυνση αυτή είναι και το ολοκληρωμένο πληροφοριακό σύστημα που μελετήθηκε και υλοποιήθηκε στην παρούσα διπλωματική εργασία.
 
-\section{Πληροφοριακά συστήματα αιμοδοσίας}
-	\subsection{Κατασταση στο εξωτερικο}
-		Ανελυσε Καναδα και Ηνωμενο Βασιλειο που εχουν κανει καλη δουλεια
-	\subsection{Αποθήκευση προσωπικών δεδομένων - security}
-		(Ελλάδα και εξωτερικό)
-	\subsection{Επεξεργασια Προσωπικών Δεδομένων}
-	\subsection{Ασφάλεια ιατρικών δεδομένων και προστασία του απορρήτου του
-ασθενούς}
-		τι παιζει με την αρχη προστασιας δεδομενων ; (το αναφεραν στο εθνικο μητρωο αιμοδοτων - μαθε λεπτομερειες!)
+%\section{Πληροφοριακά συστήματα αιμοδοσίας}
+%	\subsection{Κατασταση στο εξωτερικο}
+%		Ανελυσε Καναδα και Ηνωμενο Βασιλειο που εχουν κανει καλη δουλεια
+%	\subsection{Αποθήκευση προσωπικών δεδομένων - security}
+%		(Ελλάδα και εξωτερικό)
+%	\subsection{Επεξεργασια Προσωπικών Δεδομένων}
+%	\subsection{Ασφάλεια ιατρικών δεδομένων και προστασία του απορρήτου του
+%ασθενούς}
+%		τι παιζει με την αρχη προστασιας δεδομενων ; (το αναφεραν στο εθνικο μητρωο αιμοδοτων - μαθε λεπτομερειες!)
 
 \section{Κινδυνοι που προκύπτουν μέσα από αιμοδοσία (ασθένειες, ποσοστά)}
 
