--- a/thesis.tex
+++ b/thesis.tex
@@ -143,7 +143,9 @@
 \backmatter
 \appendix
 
-\includepdf[scale=0.5, pages={1}, pagecommand=\chapter{Ερωτηματολόγιο Αιμοδότη}]{Appendix/donor_questionnaire.pdf}\label{Donor Questionnaire} 
+\includepdf[scale=0.5, pages={1}, pagecommand=\chapter{Ερωτηματολόγιο Αιμοδότη}]{Appendix/donor_questionnaire.pdf}\label{Donor Questionnaire}
+
+\include{blood_centers_appendix} 
 
 \include{glossary}
 
